# hippo_sim

./: CHANGELOG.rst  CMakeLists.txt  package.xml
launch/: display.launch.py  spawn_apriltag_floor.launch.py  spawn_bluerov.launch.py  spawn_hippocampus.launch.py  spawn_vehicle.launch.py  start_gazebo.launch.py  top_single_vehicle_complete.launch.py
meshes/: cube.dae  hippo3_motor_hull.dae  hippo3_motor_mount.dae  hippo3_tube.dae
models/bluerov/urdf/: bluerov_macro.xacro  bluerov_params.xacro
models/hippo3/urdf/: hippo3.xacro
models/thruster/urdf/: t200_params.xacro  thruster_macro.xacro
plugin/: CMakeLists.txt  buoyancy.cpp  buoyancy.h  hydrodynamics.cpp  thruster.cpp  thruster.h
plugins/buoyancy/: CMakeLists.txt  buoyancy.cpp
plugins/hydrodynamics/: CMakeLists.txt  hydrodynamics.cpp
plugins/odometry/: CMakeLists.txt  odometry.cpp  odometry.hpp
plugins/pose/: CMakeLists.txt  pose.cpp  pose.h
plugins/thruster/: CMakeLists.txt  thruster.cpp  thruster.h  thruster.hpp
scripts/: create_robot_description.py  generate_pool.py  generate_tag_poses.py
src/: static_bridge.cpp
urdf/: hippo2.xacro  hippo2_args.xacro  hippo2_params.xacro  hippo3.xacro  mount_macro.xacro  pool.xacro  thruster_macro.xacro  thruster_params.xacro
urdf/apriltag/: apriltag.xacro
urdf/camera/: camera_macro.xacro
urdf/hippo3/: clamp_macro.xacro  hippo3.xacro
urdf/thruster/: thruster_macro.xacro  thruster_params.xacro
world/: empty.sdf
